<feat>(JwtAuthenticationFilter.java): Cambio en la logica de JWT para empezar a usar roles